--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <title>Conor Bailey</title>
   </head>
   <body>
-    <header class="header">
+    <header class="header scroll">
       <div class="noise"></div>
       <div class="cover"></div>
       <div class="logo">
         <a href="#">Conor Bailey</a>
       </div>
-      <nav>
+      <div class="menu-toggle">MENU</div>
+      
+      <nav class="main-nav">
+        
         <ul>
           <li><a class="nav-link" href="/index.html">Home</a></li>
           <li><a class="nav-link" href="/about.html">About</a></li>
@@ -26,12 +29,21 @@
         </ul>
       </nav>
     </header>
+    <div class="mobile-nav">
+      <div class="close-menu">CLOSE</div>
+      <ul>
+        <li><a class="nav-link" href="/index.html">Home</a></li>
+        <li><a class="nav-link" href="/about.html">About</a></li>
+        <li><a class="nav-link" href="/projects.html">Projects</a></li>
+        <li><a class="nav-link" href="/contact.html">Contact</a></li>
+      </ul>
+    </div>
     <section class="container">
       <div class="welcome">
         <h1>
-          <span>HELLO, I'M CONOR.</span></br>
+          <span class="anim1">HELLO, I'M CONOR.</span></br>
   
-          <span>I'M A SOFTWARE DEVELOPER. </span>
+          <span class="anim1">I'M A SOFTWARE DEVELOPER. </span>
         </h1>
       </div>
 
@@ -44,23 +56,29 @@
         <div class="view-projects"><a href="#">View My Work</a></div>
         <div class="view-blog"><a href="#blog">Blog</a></div>
       </div>
+      <div class="line">
+
+      </div>
+      <div id="separator"></div>
 
     </section>
     <section class="blog" id="blog">
-      <div class="separator"></div>
-  
 
       <div class="blog-posts">
+        <!-- <div class="blog-line"></div> -->
 
-
+      </div>
+      <div class="pagination">
+        <div class="first">First</div>
+        <div class="previous">Previous</div>
+        <div class="next">Next</div>
+        <div class="last">Last</div>
       </div>
     </section>
 
     <div class="image-break">
       <div class="break-cover"></div>
     </div>
-
-
 
     <footer>
       <div class="footer-cover">
@@ -74,7 +92,16 @@
       </div>
     </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <script src="https://kit.fontawesome.com/7577eba8ec.js" crossorigin="anonymous"></script>
     <script src="app.js"></script>
+
+    <script>
+      gsap.from('.welcome', {y: 50, opacity: 0, duration: 1});
+      gsap.from('.certificates', {y: 50, opacity: 0, duration: 1, delay: 0.5});
+      gsap.from('.proj-blog', {y: 50, opacity: 0, duration: 1, delay: 0.7});
+
+      // gsap.to(rule,{cssRule: {scaleY: 0, duration: 0.5}} )
+    </script>
   </body>
 </html>
